--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
   <link rel="stylesheet" href="https://fonts.google.com/specimen/Figtree">
   <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | Blog preview card</title>
@@ -17,7 +17,7 @@
   <div class="container">
     <div class="card">
       <div class="img">
-        <img src="assets/images/illustration-article.svg" alt="">
+        <img src="images/illustration-article.svg" alt="">
       </div>
       <div class="text">
         <button>Learning</button>
@@ -29,7 +29,7 @@
       </div>
       <div class="name">
         <div class="img">
-          <img src="assets/images/image-avatar.webp" alt="">
+          <img src="images/image-avatar.webp" alt="">
         </div>
         <p>Greg Hooper</p>
       </div>
