--- a/index.html
+++ b/index.html
@@ -16,29 +16,30 @@
 <body>
   <div class="container">
     <div class="card">
-      <div class="img">
+        <header class="img">
         <img src="images/illustration-article.svg" alt="">
-      </div>
-      <div class="text">
+        </header>
+      
+      <main class="text">
         <button>Learning</button>
         <p class="Published">Published 21 Dec 2023</p>
         <h3>HTML & CSS foundations</h3>
         <p class="paragraph"> These languages are the backbone of every website, defining structure, content, and
           presentation.
         </p>
-      </div>
-      <div class="name">
+      </main>
+      <main class="name">
         <div class="img">
           <img src="images/image-avatar.webp" alt="">
         </div>
         <p>Greg Hooper</p>
       </div>
-    </div>
+    </main>
 
-    <div class="attribution">
+    <footer class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
       Coded by <a href="#">Rahaf</a>.
-    </div>
+    </footer>
 
   </div>
 </body>
