--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
         <img src="images/illustration-article.svg" alt="">
       </header>
 
-      <main class="text">
+      <nav class="text">
         <button>Learning</button>
         <p class="Published">Published 21 Dec 2023</p>
-        <h3>HTML & CSS foundations</h3>
+        <h1>HTML & CSS foundations</h1>
         <p class="paragraph"> These languages are the backbone of every website, defining structure, content, and
           presentation.
         </p>
-      </main>
+      </nav>
       <main class="name">
         <div class="img">
           <img src="images/image-avatar.webp" alt="">
